# coffee_overflow

./: .env  .gitignore  README.md  flake.nix
backend/: .env  Cargo.toml  db.sqlite
backend/entity/: Cargo.toml
backend/entity/src/entities/: mod.rs  prelude.rs  session.rs  state.rs  user.rs  user_state.rs
backend/migration/src/: lib.rs  m20251028_205246_add_users_table.rs  m20251029_160900_state_table.rs  m20251029_170000_add_session_table.rs  m20251029_180000_add_renewal_date_to_user_state.rs
backend/src/: login.rs  main.rs  recommendations.rs  register.rs  update.rs  user_details.rs
frontend/: CLAUDE.md  package-lock.json  package.json
frontend/src/: theme.scss
frontend/src/lib/components/dashboard/: AppBar.svelte  CourseCard.svelte  ProgressCircle.svelte  StatCard.svelte
frontend/src/lib/components/onboarding/: FormSection.svelte  ProgressPreview.svelte  TopicChip.svelte
frontend/src/lib/components/shared/: GradientButton.svelte
frontend/src/lib/constants/: strings.ts
frontend/src/lib/data/: constants.ts  courseCatalog.ts  mockCourses.ts
frontend/src/lib/network/: api.ts  types.ts
frontend/src/lib/stores/: user.ts
frontend/src/lib/types/: index.ts
frontend/src/lib/util/: preventdefault.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/dashboard/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/onboarding/: +page.svelte
frontend/src/theme/: _smui-theme.scss
frontend/static/: clear-storage.js  smui.css
