[package]
name = "coffee_overflow"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "entity", "migration" ]

[dependencies]
entity = { path = "entity" }
anyhow = "1.0.100"
axum = "0.8.6"
dotenvy = "0.15.7"
sea-orm = { version = "1.1.17", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
sha2 = "0.10"
uuid = { version = "1.11", features = ["v4"] }
tower-cookies = "0.11"
